src/objects/AccountContactRelation.object
<CustomObject>
    <fields>
        <fullName>BST_AccountContact_P1__c</fullName>
        <defaultValue>1</defaultValue>
        <description>BST - This field is used for analytics</description>
        <label>AccountContact P1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_BAXTER_ONLY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to check if the record needs to be synced with IMS or not.</description>
        <label>Baxter Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BST_BOOST_Account_Contact_ID__c</fullName>
        <displayFormat>AC-{00000}</displayFormat>
        <label>BOOST Account Contact ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BST_COMITTEES__c</fullName>
        <description>Field to display the different committees available.</description>
        <label>Activity Comittess</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Member of AB Committee</fullName>
                </value>
                <value>
                    <fullName>Member of CLAN</fullName>
                </value>
                <value>
                    <fullName>Member of CLIN</fullName>
                </value>
                <value>
                    <fullName>Member of Dialysis Committee</fullName>
                </value>
                <value>
                    <fullName>Member of MMC</fullName>
                </value>
                <value>
                    <fullName>Member of MPC</fullName>
                </value>
                <value>
                    <fullName>Member of Nutrition Committee</fullName>
                </value>
                <value>
                    <fullName>Member of UTN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_COUNTRY__c</fullName>
        <description>Field to track the country.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Andorra</fullName>
                    <isActive>false</isActive>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Dom Com</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                    <isActive>false</isActive>
                    <label>Global</label>
                </value>
                <value>
                    <fullName>Luxembourg</fullName>
                    <isActive>false</isActive>
                    <label>Luxembourg</label>
                </value>
                <value>
                    <fullName>Monaco</fullName>
                    <isActive>false</isActive>
                    <label>Monaco</label>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_Contact_Name__c</fullName>
        <formula>Contact.FirstName &amp;&quot; &quot;&amp; Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_EXTERNAL_ID__c</fullName>
        <description>BST - This Id will be used to integrate with IMS data and this will be the concatenation of Account and Contact IMS Ids</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BST_HAS_BAXTER_ONLY_RECORD__c</fullName>
        <description>BST - Field to check if any of the related records have Baxter Only Field checked</description>
        <formula>IF(
OR ((Account.BST_BAXTER_ONLY__c), (Contact.BST_BAXTER_ONLY__c)),
true,
false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Baxter Only Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BST_IMS_PROCESS_FLAG__c</fullName>
        <description>Field to check if both Account and Contact in the association has IMS Flag checked, so they can be processed for IMS Processing upon creation/modification
Old Formula: IF(
	AND (Account.DP_ID__c != null, Contact.DP_ID__c != null),
	true,
	false
)</description>
        <formula>IF( 
AND (CONTAINS(Account.RecordType.DeveloperName, &apos;IMS&apos;), CONTAINS(Contact.RecordType.DeveloperName, &apos;IMS&apos;)), 
true, 
false 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMS Process Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BST_PARENT_ACCOUNT_IMS_ID__c</fullName>
        <description>Internal field for Audit purpose. Capture IMS ID of Parent Account.</description>
        <formula>IF( Account.DP_ID__c  &lt;&gt; null , Account.DP_ID__c , &apos;&apos;)</formula>
        <label>Account IMS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_RECENT_INTEGRATION_LOG__c</fullName>
        <description>Field that will hold the Most recent IMS Integration Log Id as a Hyperlink</description>
        <formula>if(BST_RELATED_INTEGRATION_LOG_ID__c!=null,HYPERLINK(&quot;/&quot; &amp;BST_RELATED_INTEGRATION_LOG_ID__c, &apos;View Integration Log&apos;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recent Integration Log</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_RELATED_INTEGRATION_LOG_ID__c</fullName>
        <description>This will hold the Id of most recent Integration Log Id</description>
        <label>Related Integration Log ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_RELATED_INTEGRATION_LOG_NAME__c</fullName>
        <description>Name of the Related Integration Log</description>
        <label>Related Integration Log Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_ROLE_1__c</fullName>
        <description>Baxter Specific Field-Displaying the roles.</description>
        <label>BAX Role 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Administration</fullName>
                    <isActive>false</isActive>
                    <label>Administration</label>
                </value>
                <value>
                    <fullName>Aesthetic/Recontructive Surgery</fullName>
                    <isActive>false</isActive>
                    <label>Aesthetic/Recontructive Surgery</label>
                </value>
                <value>
                    <fullName>Anaesthesia</fullName>
                    <isActive>false</isActive>
                    <label>Anaesthesia</label>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                    <isActive>false</isActive>
                    <label>Assistant</label>
                </value>
                <value>
                    <fullName>Assistant/Student</fullName>
                    <isActive>false</isActive>
                    <label>Assistant/Student</label>
                </value>
                <value>
                    <fullName>Biotech/Technical Dept</fullName>
                    <isActive>false</isActive>
                    <label>Biotech/Technical Dept</label>
                </value>
                <value>
                    <fullName>Burns</fullName>
                    <isActive>false</isActive>
                    <label>Burns</label>
                </value>
                <value>
                    <fullName>Cardiology</fullName>
                    <isActive>false</isActive>
                    <label>Cardiology</label>
                </value>
                <value>
                    <fullName>Cardiovascular Surgery</fullName>
                    <isActive>false</isActive>
                    <label>Cardiovascular Surgery</label>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Clinical Pharmacy</fullName>
                    <isActive>false</isActive>
                    <label>Clinical Pharmacy</label>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                    <isActive>false</isActive>
                    <label>Diabetes</label>
                </value>
                <value>
                    <fullName>Dialysis</fullName>
                    <isActive>false</isActive>
                    <label>Dialysis</label>
                </value>
                <value>
                    <fullName>Dietetics</fullName>
                    <isActive>false</isActive>
                    <label>Dietetics</label>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                    <isActive>false</isActive>
                    <label>Distributor</label>
                </value>
                <value>
                    <fullName>Executive level</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                    <isActive>false</isActive>
                    <label>Finance</label>
                </value>
                <value>
                    <fullName>Home Care</fullName>
                    <isActive>false</isActive>
                    <label>Home Care</label>
                </value>
                <value>
                    <fullName>IT</fullName>
                    <isActive>false</isActive>
                    <label>IT</label>
                </value>
                <value>
                    <fullName>Legal</fullName>
                    <isActive>false</isActive>
                    <label>Legal</label>
                </value>
                <value>
                    <fullName>Logistic</fullName>
                    <isActive>false</isActive>
                    <label>Logistic</label>
                </value>
                <value>
                    <fullName>Nursing</fullName>
                    <isActive>false</isActive>
                    <label>Nursing</label>
                </value>
                <value>
                    <fullName>OB/GYN</fullName>
                    <isActive>false</isActive>
                    <label>OB/GYN</label>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_ROLE_2__c</fullName>
        <description>Controlling Field of BAX Role 1.</description>
        <label>BAX Role 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BST_ROLE_1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Administration</fullName>
                    <isActive>false</isActive>
                    <label>Administration</label>
                </value>
                <value>
                    <fullName>Administrative Collaborator</fullName>
                </value>
                <value>
                    <fullName>Aesthetic/Recontructive Surgery</fullName>
                    <isActive>false</isActive>
                    <label>Aesthetic/Recontructive Surgery</label>
                </value>
                <value>
                    <fullName>Anaesthesia</fullName>
                    <isActive>false</isActive>
                    <label>Anaesthesia</label>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                    <isActive>false</isActive>
                    <label>Assistant</label>
                </value>
                <value>
                    <fullName>Assistant/Student</fullName>
                </value>
                <value>
                    <fullName>Biotech/Technical Dept</fullName>
                    <isActive>false</isActive>
                    <label>Biotech/Technical Dept</label>
                </value>
                <value>
                    <fullName>Board Member</fullName>
                </value>
                <value>
                    <fullName>Burns</fullName>
                    <isActive>false</isActive>
                    <label>Burns</label>
                </value>
                <value>
                    <fullName>Cardiology</fullName>
                    <isActive>false</isActive>
                    <label>Cardiology</label>
                </value>
                <value>
                    <fullName>Cardiovascular Surgery</fullName>
                    <isActive>false</isActive>
                    <label>Cardiovascular Surgery</label>
                </value>
                <value>
                    <fullName>Clinical Pharmacy</fullName>
                    <isActive>false</isActive>
                    <label>Clinical Pharmacy</label>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                    <isActive>false</isActive>
                    <label>Diabetes</label>
                </value>
                <value>
                    <fullName>Dialysis</fullName>
                    <isActive>false</isActive>
                    <label>Dialysis</label>
                </value>
                <value>
                    <fullName>Dietetics</fullName>
                    <isActive>false</isActive>
                    <label>Dietetics</label>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                    <isActive>false</isActive>
                    <label>Distributor</label>
                </value>
                <value>
                    <fullName>Finance</fullName>
                    <isActive>false</isActive>
                    <label>Finance</label>
                </value>
                <value>
                    <fullName>Head Nurse</fullName>
                </value>
                <value>
                    <fullName>Head of Service/Department</fullName>
                </value>
                <value>
                    <fullName>Home Care</fullName>
                    <isActive>false</isActive>
                    <label>Home Care</label>
                </value>
                <value>
                    <fullName>IT</fullName>
                    <isActive>false</isActive>
                    <label>IT</label>
                </value>
                <value>
                    <fullName>Legal</fullName>
                    <isActive>false</isActive>
                    <label>Legal</label>
                </value>
                <value>
                    <fullName>Logistic</fullName>
                    <isActive>false</isActive>
                    <label>Logistic</label>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Nursing</fullName>
                    <isActive>false</isActive>
                    <label>Nursing</label>
                </value>
                <value>
                    <fullName>OB/GYN</fullName>
                    <isActive>false</isActive>
                    <label>OB/GYN</label>
                </value>
                <value>
                    <fullName>Other Paramedical</fullName>
                </value>
                <value>
                    <fullName>Pharmacist</fullName>
                </value>
                <value>
                    <fullName>Physician/Doctor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_ROLE_3__c</fullName>
        <description>Controlling Field of BAX Role 2.</description>
        <label>BAX Role 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BST_ROLE_2__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Aesthetic/Reconstructive Surgery</fullName>
                </value>
                <value>
                    <fullName>Aesthetic/Recontructive Surgery</fullName>
                </value>
                <value>
                    <fullName>Anaesthesia</fullName>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                </value>
                <value>
                    <fullName>Assistant/Student</fullName>
                </value>
                <value>
                    <fullName>Biotech/Technical Dept</fullName>
                </value>
                <value>
                    <fullName>Burns</fullName>
                </value>
                <value>
                    <fullName>Cardiac Surgery</fullName>
                </value>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular Surgery</fullName>
                </value>
                <value>
                    <fullName>Clinical Biology</fullName>
                </value>
                <value>
                    <fullName>Clinical Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Dialysis</fullName>
                </value>
                <value>
                    <fullName>Dietetics</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>E.N.T</fullName>
                </value>
                <value>
                    <fullName>Emergency Medicine</fullName>
                </value>
                <value>
                    <fullName>Endocrinology</fullName>
                </value>
                <value>
                    <fullName>Endoscopy</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Gastroenterology</fullName>
                </value>
                <value>
                    <fullName>General Surgery</fullName>
                </value>
                <value>
                    <fullName>Geriatry</fullName>
                </value>
                <value>
                    <fullName>Head &amp; Neck Surgery</fullName>
                </value>
                <value>
                    <fullName>Hepatology</fullName>
                </value>
                <value>
                    <fullName>Home Care</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Hygiene</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_STATUS__c</fullName>
        <description>For Marking the record with different status.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Baxter Pending Review</fullName>
                </value>
                <value>
                    <fullName>Baxter Rejected</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <isActive>false</isActive>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>IMS Accepted</fullName>
                </value>
                <value>
                    <fullName>IMS Partially Accepted</fullName>
                </value>
                <value>
                    <fullName>IMS Pending Review</fullName>
                </value>
                <value>
                    <fullName>IMS Rejected</fullName>
                </value>
                <value>
                    <fullName>IMS Updated</fullName>
                    <isActive>false</isActive>
                    <label>IMS Updated</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DP_ACT_EMAIL__c</fullName>
        <description>IMS Activity Email Detail</description>
        <label>IMS Activity Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DP_ACT_FAX__c</fullName>
        <description>IMS Activity Fax Detail</description>
        <label>IMS Activity Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DP_ACT_PHONE__c</fullName>
        <description>IMS Activity Phone Detail</description>
        <label>IMS Activity Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DP_ACT_ROLE_1__c</fullName>
        <description>Stores IMS Activity Role 1 value.</description>
        <label>IMS Activity Role 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BST_COUNTRY__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounting and Finance</fullName>
                </value>
                <value>
                    <fullName>Administrative Staff</fullName>
                </value>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>Allied Health Professionals</fullName>
                    <isActive>false</isActive>
                    <label>Allied Health Professionals</label>
                </value>
                <value>
                    <fullName>Assistant practitioner</fullName>
                </value>
                <value>
                    <fullName>Chief Doctor</fullName>
                </value>
                <value>
                    <fullName>Chief nurse</fullName>
                </value>
                <value>
                    <fullName>Clinical Nurse Specialist</fullName>
                </value>
                <value>
                    <fullName>Coordinator</fullName>
                </value>
                <value>
                    <fullName>Dean Deputy</fullName>
                </value>
                <value>
                    <fullName>Deputy Head of Clinic</fullName>
                </value>
                <value>
                    <fullName>Deputy Head of Dept</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Director (Administrative )</fullName>
                </value>
                <value>
                    <fullName>Director (Deputy)</fullName>
                </value>
                <value>
                    <fullName>Director (Financial)</fullName>
                </value>
                <value>
                    <fullName>Director (Hospital/Medical Institute Care)</fullName>
                </value>
                <value>
                    <fullName>Director (Marketing)</fullName>
                </value>
                <value>
                    <fullName>Director (Medical)</fullName>
                </value>
                <value>
                    <fullName>Director (Miscellaneous)</fullName>
                </value>
                <value>
                    <fullName>Doctor</fullName>
                </value>
                <value>
                    <fullName>Doctor (Company)</fullName>
                </value>
                <value>
                    <fullName>Doctor (Family Doctor)</fullName>
                </value>
                <value>
                    <fullName>Doctor (Inspector)</fullName>
                </value>
                <value>
                    <fullName>Doctor (Military)</fullName>
                </value>
                <value>
                    <fullName>Doctor (School)</fullName>
                </value>
                <value>
                    <fullName>Doctor (Specialist)</fullName>
                </value>
                <value>
                    <fullName>Doctor Hosp (Consultant)</fullName>
                </value>
                <value>
                    <fullName>Doctor Hospital Assistant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DP_ACT_ROLE_2__c</fullName>
        <description>Stores IMS Activity Role 2 value</description>
        <label>IMS Activity Role 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BST_COUNTRY__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounting and Finance</fullName>
                </value>
                <value>
                    <fullName>Administrative Staff</fullName>
                </value>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>Assistant practitioner</fullName>
                </value>
                <value>
                    <fullName>Chief Doctor</fullName>
                </value>
                <value>
                    <fullName>Chief nurse</fullName>
                </value>
                <value>
                    <fullName>Clinical Nurse Specialist</fullName>
                </value>
                <value>
                    <fullName>Coordinator</fullName>
                </value>
                <value>
                    <fullName>Deputy Head of Clinic</fullName>
                </value>
                <value>
                    <fullName>Deputy Head of Dept</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Director (Administrative )</fullName>
                </value>
                <value>
                    <fullName>Director (Deputy)</fullName>
                </value>
                <value>
                    <fullName>Director (Financial)</fullName>
                </value>
                <value>
                    <fullName>Director (Hospital/Medical Institute Care)</fullName>
                </value>
                <value>
                    <fullName>Director (Marketing)</fullName>
                </value>
                <value>
                    <fullName>Director (Medical)</fullName>
                </value>
                <value>
                    <fullName>Director (Miscellaneous)</fullName>
                </value>
                <value>
                    <fullName>Doctor</fullName>
                </value>
                <value>
                    <fullName>Doctor (Company)</fullName>
                </value>
                <value>
                    <fullName>Doctor (Inspector)</fullName>
                </value>
                <value>
                    <fullName>Doctor (Military)</fullName>
                </value>
                <value>
                    <fullName>Doctor (School)</fullName>
                </value>
                <value>
                    <fullName>Doctor (Specialist)</fullName>
                </value>
                <value>
                    <fullName>Doctor Hosp (Consultant)</fullName>
                </value>
                <value>
                    <fullName>Doctor Hospital Assistant</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>Head of Clinic</fullName>
                </value>
                <value>
                    <fullName>Head of Dept</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DP_ACT_ROLE_3__c</fullName>
        <description>Stores IMS Activity Role 3 value</description>
        <label>IMS Activity Role 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BST_COUNTRY__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounting and Finance</fullName>
                </value>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>Chief Doctor</fullName>
                </value>
                <value>
                    <fullName>Chief nurse</fullName>
                </value>
                <value>
                    <fullName>Clinical Nurse Specialist</fullName>
                </value>
                <value>
                    <fullName>Coordinator</fullName>
                </value>
                <value>
                    <fullName>Deputy Head of Clinic</fullName>
                </value>
                <value>
                    <fullName>Deputy Head of Dept</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Director (Administrative )</fullName>
                </value>
                <value>
                    <fullName>Director (Financial)</fullName>
                </value>
                <value>
                    <fullName>Director (Hospital/Medical Institute Care)</fullName>
                </value>
                <value>
                    <fullName>Director (Marketing)</fullName>
                </value>
                <value>
                    <fullName>Director (Medical)</fullName>
                </value>
                <value>
                    <fullName>Doctor (Company)</fullName>
                </value>
                <value>
                    <fullName>Doctor (Military)</fullName>
                </value>
                <value>
                    <fullName>Doctor (School)</fullName>
                </value>
                <value>
                    <fullName>Doctor Hosp (Consultant)</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>Head of Clinic</fullName>
                </value>
                <value>
                    <fullName>Head of Dept</fullName>
                </value>
                <value>
                    <fullName>Management staff</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Manager (Purchase)</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Medicine Resident</fullName>
                </value>
                <value>
                    <fullName>Member (Committee )</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Operating department practitioner</fullName>
                </value>
                <value>
                    <fullName>Pharmacist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DP_ACT_SEQ_NUM__c</fullName>
        <description>Stores Activity Seq Number.</description>
        <label>IMS Activity Seq Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>